<resources>
    <string name="app_name">Notebook Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_insert_password">Masukkan Password</string>
    <string name="txt_insert_email">Masukkan Email</string>
    <string name="txt_login">Login</string>
    <string name="txt_register_acc">Belum punya akun?</string>
    <string name="txt_et_username">Masukkan Username</string>
    <string name="txt_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="txt_register">Daftar</string>
    <string name="txt_default_title">Default title</string>
    <string name="txt_input_data">Input Data</string>
    <string name="txt_et_title">Masukkan Judul</string>
    <string name="txt_et_notes">Masukkan Notes</string>
    <string name="txt_input">Input</string>
    <string name="txt_edit_data">Edit Data</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete_data">Hapus Data</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_cancel">Batal</string>
</resources>