<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">>

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_edit_data"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/txt_et_title"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_update"/>

    <EditText
        android:id="@+id/et_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/txt_et_notes"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_title"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_edit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/et_notes"
        app:layout_constraintStart_toStartOf="@id/et_notes"
        app:layout_constraintTop_toBottomOf="@id/et_notes"/>

</androidx.constraintlayout.widget.ConstraintLayout>